tests/compile-fail/generic_event_mutable_completion_origin.stderr
error: Completion origin data cannot be a mutable reference.
 --> tests/compile-fail/generic_event_mutable_completion_origin.rs:8:33
  |
8 |          Finishing + completion<Operation> = X,
  |                                 ^^^^^^^^^
